--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "start-dev": "nodemon --inspect ./bin/www",
+    "build-css": "sass scss:public/css",
+    "watch-css": "nodemon --ext scss --exec \"npm run build-css\""
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -11,6 +14,8 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "pug": "^3.0.2",
+    "sass": "^1.32.11"
   }
 }
